--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -15,6 +15,10 @@
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script src="vendor/twbs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="assets/common.js"></script>
+	<script>
+		subscribe_string = '{{ __("Subscribe") }}';
+		unsubscribe_string = '{{ __("Unsubscribe") }}';
+	</script>
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
