--- a/templates/new/_layout.twig
+++ b/templates/new/_layout.twig
@@ -12,7 +12,7 @@
 			<a width="121" height="32" href="index.php?frontend=new">
 				<div class="logo"></div>
 			</a>
-			<a href="gordon.php?frontend=new" class="btn btn-blue header-right">Login</a>
+			<a href="gordon.php?frontend=new" class="btn btn-primary header-right">Login</a>
 		</div>
 	</div>
 	<div class="nav">
