--- a/templates/new/index.twig
+++ b/templates/new/index.twig
@@ -25,12 +25,12 @@
 				</div>
 				<div class="control-group">
 					<div class="controls text-end">
-						<button type="submit" class="btn btn-grey">Sign in</button>
+						<button type="submit" class="btn btn-secondary">Sign in</button>
 					</div>
 				</div>
 			</form>
 			<hr>
-			<div class="text-center">Don't have an account? <a href="register.php" class="btn btn-small btn-blue">Sign up</a></div>
+			<div class="text-center">Don't have an account? <a href="register.php" class="btn btn-small btn-primary">Sign up</a></div>
 		</div>
 		<h3>News and updates</h3>
 		<p class="text-danger">URGENT: If you have used AIM Phoenix in the past 3.5-ish years, then please note that there's a huge chance your account infomation has been leaked in a database leak that also affected Escargot. If your Phoenix and squareBracket passwords are indentical. CHANGE IT NOW.</p>
