--- a/templates/default/browse.twig
+++ b/templates/default/browse.twig
@@ -4,7 +4,13 @@
 
 	{% block content %}
 <div class="row"><div class="col">
-	<h3>{{ __("Videos") }}</h3>
+	<h3>
+		{% if 'subscriptions' in url %}
+			{{ __("Videos from subscriptions") }}
+		{% else %}
+			{{ __("Videos") }}
+		{% endif %}
+	</h3>
 	<div class="card-body">
 		{% for video in videos|batch(4) %}
 		<div class="row">
@@ -15,7 +21,13 @@
 			{% endfor %}
 		</div>
 		{% else %}
-			<p>{{ __("No uploaded videos.") }}</p>
+			<p>
+				{% if 'subscriptions' in url %}
+					{{ __("Your subscriptions haven't uploaded videos yet.") }}
+				{% else %}
+					{{ __("No uploaded videos.") }}
+				{% endif %}
+			</p>
 		{% endfor %}
 		{{ pagination(pageCount, currentPage, url) }}
 	</div>
