--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -4,27 +4,53 @@
 	{% block content %}
 <div class="row">
 	<div class="col-xl-8">
+		{% if subscriptionVideos %}
 			<div class="row">
+				<div class="col-8">
+				<h3>{{ __("Videos from subscriptions") }}</h3>
+				</div><div class="col-4">
+				<div class="text-end"><a href="browse.php?subscriptions" class="btn btn-light btn-sm">{{ __("More videos") }}</a></div>
+				</div>
+				<h3></h3>
+				<div class="row">
+					{% for video in subscriptionVideos %}
+						<div class="col-3">
+							{{ browse_video_box(video) }}
+						</div>
+					{% else %}
+						<p>{{ __("Your subscriptions haven't uploaded videos yet.") }}</p>
+					{% endfor %}
+				</div>
+			</div>
+		{% endif %}
+		<div class="row">
 			<div class="col-8">
 			<h3>{{ __("Recently uploaded to squareBracket") }}</h3>
 			</div><div class="col-4">
-			<div class="text-end"><a href="browse.php" class="btn btn-light btn-sm">More videos</a></div>
+			<div class="text-end"><a href="browse.php" class="btn btn-light btn-sm">{{ __("More videos") }}</a></div>
 			</div>
-			</div>
-				{% for video in videos %}
-					{{ video_box(video) }}
-				{% else %}
-					<p>{{ __("No uploaded videos.") }}</p>
-				{% endfor %}
 		</div>
+		{% for video in videos %}
+			{{ video_box(video) }}
+		{% else %}
+			<p>{{ __("No uploaded videos.") }}</p>
+		{% endfor %}
+	</div>
 	<div class="col-xl-4">
 		{% if logged_in %}
 			<h3>{{ __("Hi there, %s", [current_user.username]) }}</h3>
 			</p>
 				<img class="float-end rounded w-25" src="{{ profile_image(current_user.username) }}"  alt="pfp">
 				<p class="text-start float-start">
-					<p>{{ __("You have %s subscribers.", ['0']) }}</p>
-					<p>{{ __("You have %s views.", [totalViews ?? __("no")]) }}</p>
+					{# hack to prevent twig from outputing the number 1 #}
+					{% if totalSubscribers != 1 %}
+						{% set pluralSubscribers = __("s") %}
+					{% endif %}
+					{% if totalViews != 1 %}
+						{% set pluralViews = __("s") %}
+					{% endif %}
+					<p>{{ __("You have %s subscriber%s.", [totalSubscribers ?? __("no"), pluralSubscribers]) }}</p>
+					<p>{{ __("You have %s view%s.", [totalViews ?? __("no"), pluralViews]) }}</p>
 					<p>{{ __("Your account was made %s.", [creationDate | relative_time]) }}</p>
 				</p>
 			</p>
