--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -149,7 +149,7 @@
 			<div class="container">
 			<div class="card">
 			<div class="card-body">
-			<h4 class="my-0">squareBracket Pre-Beta</h4>
+			<h4 class="my-0">squareBracket Beta 1</h4>
 			<p class="my-0"><b>{{ __("By squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} | <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} | <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}</p>
 			</div>
 			</div>
