--- a/templates/new/_layout.twig
+++ b/templates/new/_layout.twig
@@ -28,8 +28,8 @@
 	<div id="content">
 		{% block content %}{% endblock %}
 		<div class="text-center">
-			<h4>squareBracket Pre-Beta/sbNext Preview</h4>
-			<p>By squareBracket contributors · 2020-2021</p>
+			<h4>squareBracket Beta 1</h4>
+			<p>By squareBracket contributors · 2020-{{ 'now' | date('Y') }}</p>
 			<p><small>CSS based on the GoodTube website by Diyamund.</small></p>
 		</div>
 	</div>
