--- a/templates/default/admin.twig
+++ b/templates/default/admin.twig
@@ -1,10 +1,10 @@
 {% extends "_layout-admin.twig" %}
 
-{% block title %}{{ __("Browse") }}{% endblock %}
+{% block title %}{{ __("Admin") }}{% endblock %}
 
 	{% block content %}
-<h2>Videos</h2>
-<h3>Approved</h3>
+<h2>{{ __("All videos") }}</h2>
+<h3>{{ __("Approved videos") }}</h3>
 {% for video in videos %}
 	{{ video_box(video) }}
 {% endfor %}
