make profiles look more accurate to alpha3 flash concept

--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -127,7 +127,7 @@
 			<!--/.nav-collapse -->
 		</div>
 	</nav>
-	<div style="margin-bottom:20px">
+	<div class="mb-4">
 	<nav class="py-1 bg-dark">
 		<div class="container">
 			<ul class="nav me-auto">
