--- a/templates/default/user.twig
+++ b/templates/default/user.twig
@@ -13,29 +13,17 @@
 	{{ profCss | raw }}
 	.bg-channel-background {
 	background-image: url('{{ channel_background(user.username) }}');
-    margin-top: -20px;
+    margin-top: -24px;
 	padding-bottom: 25px;
-    padding-top: 20px;
 	}
 </style>
 <div class="bg-channel-background">
-	{% endblock %}
-
-	{% block content %}
-<div class="row">
-	{% if edited %}
-	<div class="alert alert-success alert-dismissible fade show" role="alert">
-		{{ __("Your profile settings were successfully updated.") }}
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-	</div>
-	{% endif %}
-	<!-- This prevents the user info box from being extremely tall. Box probably needs to be redesigned... -->
-	<div class="col-12 mb-2">
-	<div class="p-1 bg-custom-profile rounded-3 text-white">
-		<div class="container-fluid py-4">
+	<div class="col-12 mb-2 mt-0">
+	<div class="p-1 bg-custom-profile text-white">
+		<div class="container py-4">
 			<div class="row">
 				<div class="col-md-11">
-					<img class="float-start rounded" src="{{ profile_image(user.username) }}" style="margin-right: 1.5%;" width="128" alt="pfp">
+					<img class="float-start rounded me-3" src="{{ profile_image(user.username) }}" width="144" alt="pfp">
 					<h1 class="align-top">
 						{{ user.username }}{% if user.u_flags == 1 %}<svg data-bs-toggle="tooltip"
 							data-bs-placement="top" title="{{ __(" squareBracket Partner") }}"
@@ -54,8 +42,20 @@
 			</div>
 		</div>
 	</div>
-</div></div>
+</div>
+	{% endblock %}
+
+	{% block content %}
 <div class="row">
+	{% if edited %}
+	<div class="col-12">
+		<div class="alert alert-success alert-dismissible fade show" role="alert">
+			{{ __("Your profile settings were successfully updated.") }}
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
+	</div>
+	{% endif %}
+	<!-- This prevents the user info box from being extremely tall. Box probably needs to be redesigned... -->
 	<div class="col-md-8 order-2 order-md-1">
 		<div class="card">
 			<div class="card-body">
