rename partner to checkmark, and redo navbar
plus other shit i don't really remember

--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -43,12 +43,12 @@
   <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
       <img src="/assets/profiledef_next.png" width="20px" class="rounded me-2" alt="...">
-      <strong class="me-auto">Sneed</strong>
+      <strong class="me-auto">Katt</strong>
       <small>11 mins ago</small>
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
     <div class="toast-body">
-      Cookie can't feed nor seed.
+      Me when the
     </div>
   </div>
 </div>-->
@@ -59,16 +59,11 @@
 					class="d-inline-block align-text-top"></a>
 			<form class="d-flex" method="GET" action="search.php">
 			<div class="input-group">
-				<input name="query" class="form-control" type="search" placeholder="{{ __("Search videos") }}"
+				<input name="query" class="form-control" type="search" placeholder="{{ __("Search") }}"
 					aria-label="Search">
-				<button class="btn btn-success dropdown-toggle" type="submit" data-bs-toggle="dropdown" aria-expanded="false">
+				<button class="btn btn-success" type="submit" aria-expanded="false">
 					{{ icon('search', 20) }}
 				</button>
-				  <ul class="dropdown-menu dropdown-menu-end">
-					<li><a class="dropdown-item" href="#">{{ __("Videos") }}</a></li>
-					<li><a class="dropdown-item" href="#">{{ __("Users") }}</a></li>
-					<li><a class="dropdown-item" href="#">Posts?</a></li>
-				  </ul>
 			</div>
 			</form>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,7 +72,24 @@
 			<div id="navbarCollapse" class="collapse navbar-collapse">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
 				<ul class="navbar-nav">
-					<div class="dropdown">
+					{% if logged_in %}
+						<li class="nav-item">
+							<a href="upload.php" class="nav-link">
+								<div class="d-flex align-items-center">
+									<div class="flex-grow-1 pe-1">
+										{{ icon('camera-video', 24) }}
+									</div>
+									{{ __("Upload") }}
+								</div>
+							</a>
+						</li>
+					{% else %}
+					<div class="d-grid gap-2 d-md-block">
+						<a href="login.php" class="btn btn-primary me-md-1">{{ __("Login") }}</a>
+						<a href="register.php" class="btn btn-secondary">{{ __("Register") }}</a>
+					</div>
+					{% endif %}
+										<div class="dropdown">
 						<li class="nav-item">
 							<style>
 								#openSettings::after {
@@ -91,20 +103,20 @@
 							<a href="#" id="openSettings" class="dropdown-toggle nav-link" data-bs-toggle="dropdown"
 								aria-expanded="false">
 								{% if logged_in %} <img src="{{ profile_image(current_user.username) }}"
-									alt="{{ current_user.username }}" class="rounded" width="36" height="36"> {{ current_user.username }}
-								{% else %}<img src="/assets/profileguest.png" alt="Guest" class="rounded" width="36"
-									height="36"> {{ __("Not signed in") }}{% endif %}
+									alt="{{ current_user.username }}" class="rounded" width="30" height="30">
+								{% else %}<img src="/assets/profileguest.png" alt="Guest" class="rounded" width="30"
+									height="30">{% endif %}
 							</a>
 						</li>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="mainMenu">
 							{% if logged_in %}
-								<li><a class="dropdown-item" href="settings.php">{{ icon('tools', 20) }} {{ __("Settings") }}</a></li>
+							<li><a class="dropdown-item" href="settings.php">{{ icon('tools', 16) }} {{ __("Settings") }}</a></li>
 							{% endif %}
-							<li><a class="dropdown-item" id="themeSelect" href="#">{{ icon('brush', 20) }} {{ __("Change theme") }}</a></li>
+							<li><a class="dropdown-item" id="themeSelect" href="#">{{ icon('brush', 16) }} {{ __("Change theme") }}</a></li>
 							{% if logged_in %}
-							<li><a class="dropdown-item" href="user.php?name={{ current_user.username }}">{{ icon('person-lines-fill', 20) }} {{ __("My profile") }}</a></li>
+							<li><a class="dropdown-item" href="user.php?name={{ current_user.username }}">{{ icon('person-lines-fill', 16) }} {{ __("My profile") }}</a></li>
 							<li><hr class="dropdown-divider"></li>
-							<li><a class="dropdown-item" href="logout.php">{{ icon('door-open', 20) }} {{ __("Sign off") }}</a></li>
+							<li><a class="dropdown-item" href="logout.php">{{ icon('door-open', 16) }} {{ __("Sign off") }}</a></li>
 							{% endif %}
 						</ul>
 						<ul class="dropdown-menu" id="themeSelection" aria-labelledby="navbarDropdown">
@@ -112,16 +124,9 @@
 							<li><a class="dropdown-item" id="light" href="#">{{ __("Light") }}</a></li>
 							<li><a class="dropdown-item" id="dark" href="#">{{ __("Dark") }}</a></li>
 							<li><a class="dropdown-item" id="vanilla" href="#">{{ __("Bootstrap") }}</a></li>
-							<li><a class="dropdown-item" id="finalium" href="#">{{ __("Finalium Preview") }}</a></li>
+							<li><a class="dropdown-item" id="finalium" href="#">{{ __("Finalium") }}</a></li>
 						</ul>
 					</div>
-					{% if logged_in %}
-						<li class="nav-item"><a href="upload.php" class="nav-link">{{ icon('camera-video', 20) }} {{ __("Upload") }}</a></li>
-						<li class="nav-item"><a href="logout.php" class="nav-link">{{ icon('door-open', 20) }} {{ __("Sign off") }}</a></li>
-					{% else %}
-						<li class="nav-item"><a href="login.php" class="nav-link">{{ icon('key', 20) }} {{ __("Login") }}</a></li>
-						<li class="nav-item"><a href="register.php" class="nav-link">{{ icon('pencil-square', 20) }} {{ __("Register") }}</a></li>
-					{% endif %}
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -150,7 +155,9 @@
 			<div class="card">
 			<div class="card-body">
 			<h4 class="my-0">squareBracket Beta 1</h4>
+			<!-- 2020 was when work on PokTube (the predecessor of squareBracket) was started. Techically, PokTube and squareBracket are the same project, just with different codebases. -gr 7/20/2021 -->
 			<p class="my-0"><b>{{ __("By squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} | <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} | <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}</p>
+			<p class="my-0"><a class="me-1">{{ __("About") }}</a> <a class="me-1">{{ __("Terms") }}</a> <a class="me-1">{{ __("Guidelines") }}</a> <a class="me-1">{{ __("Contact") }}</a></p>
 			</div>
 			</div>
 		</footer>
