--- a/templates/default/upload.twig
+++ b/templates/default/upload.twig
@@ -12,7 +12,7 @@ enctype="multipart/form-data">
 <br>
 <dl class="row">
   <dt class="col-sm-2">{{ __("Video info") }}</dt>
-  <dd class="col-sm-10">{{ __("Enter the name and description of your video.") }}</dd>
+  <dd class="col-sm-10">{{ __("Enter the title and description of your video.") }}</dd>
 </dl>
 	<input type="text" class="form-control" name="title" value="" placeholder="{{ __("Title") }}">
 	<textarea class="form-control" name="desc" maxlength="500" form="uploadForm"
@@ -31,7 +31,7 @@ enctype="multipart/form-data">
   <h5 class="card-header">{{ __("Warning") }}</h5>
   <div class="card-body">
     <p class="card-text">{{ __("Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.") }}</p>
-    <a href="https://studio.youtube.com/" class="btn btn-secondary">{{ __("But I want to!") }}</a>
+    <a href="https://studio.youtube.com/" class="btn btn-secondary">{{ __("Upload anyways") }}</a>
   </div>
 </div>
 	</div>
