--- a/templates/default/watch.twig
+++ b/templates/default/watch.twig
@@ -112,7 +112,7 @@
 								</div>
 								<div class="col-lg-7">
 									{{ userlink(video, 'u_') }}<br>
-									<small>{{ __("Uploaded on %s", [video.time | date('M j, Y')]) }} &bull; {{ video.views }} {{ __("views") }}</small>
+									<small>{{ __("Uploaded on %s", [video.time | date('M j, Y')]) }} &bull; {{ video.views }} {{ __("views") }} &bull; {{ subCount }} {{ __("subscribers") }}</small>
 								</div>
 							</div>
 						</div>
