--- a/templates/default/register.twig
+++ b/templates/default/register.twig
@@ -36,7 +36,7 @@ register page should be merged with login page on sbnext
 		</div>
 		<div class="d-grid gap-2 d-md-flex justify-content-between">
 			<input class="btn btn-lg btn-primary flex-grow-1" type="submit" value="{{ __("Register") }}" name="action">
-			<a class="btn btn-lg btn-light" href="/">Back</a>
+			<a class="btn btn-lg btn-light" href="/">{{ __("Back") }}</a>
 		</div>
 	</div>
 </div>
