add shadows to finalium

--- a/bootstrap/_variables-finalium.scss
+++ b/bootstrap/_variables-finalium.scss
@@ -40,6 +40,15 @@ $body-bg: #f0f0f0;
 $alert-bg-scale: 0%;
 $alert-padding-y: 0.75rem;
 $alert-padding-x: 1.25rem;
+$enable-shadows: true;
+
+$box-shadow:                  0 .5rem 1rem rgba($black, .36) !default;
+$box-shadow-sm:               0 .125rem .25rem rgba($black, .161) !default;
+$box-shadow-lg:               0 1rem 3rem rgba($black, .37) !default;
+$box-shadow-inset:            inset 0 1px 2px rgba($black, .161) !default;
+$btn-box-shadow:              inset 0 1px 0 rgba($white, .25), 0 1px 1px rgba($black, .38) !default;
+$btn-active-box-shadow:       inset 0 3px 5px rgba($black, .35) !default;
+$form-range-thumb-box-shadow:              0 .1rem .25rem rgba($black, .7) !default;
 
 $theme-colors: (
   "primary":    $primary,
