--- a/templates/default/watch.twig
+++ b/templates/default/watch.twig
@@ -107,10 +107,10 @@
 							<div class="row">
 								<div class="col-lg-2" style="width:10%;padding-right:0">
 									<a href="user.php?name={{ video.u_username }}">
-										<img class="rounded w-100" src="{{ profile_image(video.u_username) }}">
+										<img class="float-start rounded w-100" src="{{ profile_image(video.u_username) }}">
 									</a>
 								</div>
-								<div class="col-lg-7">
+								<div class="col-lg-10">
 									{{ userlink(video, 'u_') }}<br>
 									<small>{{ __("Uploaded on %s", [video.time | date('M j, Y')]) }} &bull; {{ video.views }} {{ __("views") }} &bull; {{ subCount }} {{ __("subscribers") }}</small>
 								</div>
@@ -123,7 +123,7 @@
 							<a href="#" id="{% if logged_in %}dislike{% endif %}" class="text-{% if rating == 0 %}danger{% else %}body{% endif %}"><svg class="bi" width="20" height="20" fill="currentColor">
 								<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-down-fill"/>
 							</svg></a> <span id="dislikes" style="padding-right: 10px">{{ total_dislikes }}</span>
-							<button id="subscribe" class="btn btn-{% if subscribed %}secondary{% else %}warning{% endif %}" type="button" {% if not logged_in or current_user.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unsubscribe") }}{% else %}{{ __("Subscribe") }}{% endif %}</button>
+							<button id="subscribe" class="btn btn-{% if subscribed %}secondary{% elseif current_user.id == video.author %}primary{% else %}warning{% endif %}" type="button" {% if not logged_in or current_user.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unsubscribe") }}{% elseif current_user.id == video.author %}{{ __("Edit video") }}{% else %}{{ __("Subscribe") }}{% endif %}</button>
 						</div>
 						<p style="margin-top: 1rem;">{{ video.description }}</p>
 					</div>
