Replace youtube-like frowny error image with the squarebracket logo

--- a/templates/default/_error.twig
+++ b/templates/default/_error.twig
@@ -8,6 +8,6 @@
 	<hr>
 	<p>Sorry about that.</p>
 
-	<div style="text-align:center;margin:auto"><img src="assets/squarebracket_error.svg" style="width:150px;"></div>
+	<div style="text-align:center;margin:auto"><img src="assets/logo_border_placeholder.png" style="width:150px;"></div>
 </div>
 	{% endblock %}
