--- a/templates/default/_error.twig
+++ b/templates/default/_error.twig
@@ -3,11 +3,10 @@
 {% block title %}{% endblock %}
 
 	{% block content %}
-<div style="width:600px;margin:auto;background-color:#111;padding:20px;padding-bottom:100px;">
-	<h2 style="text-align:center;">{{ err_message }}</h2>
-	<hr>
-	<p>Sorry about that.</p>
-
-	<div style="text-align:center;margin:auto"><img src="assets/logo_border_placeholder.png" style="width:150px;"></div>
+<div class="bg-dark" style="max-width:700px;margin:auto;padding:20px;padding-bottom:100px;">
+	<h2 class="text-center text-white">{{ err_message }}</h2>
+	<hr class="text-muted">
+	<p class="text-white">Sorry about that.</p>
+	<div style="text-align:center;margin:auto"><img src="assets/logo_border_placeholder.png" style="max-width:150px;"></div>
 </div>
 	{% endblock %}
