roller, stop forgetting to add localization.

--- a/templates/default/_error.twig
+++ b/templates/default/_error.twig
@@ -6,7 +6,7 @@
 <div class="bg-dark" style="max-width:700px;margin:auto;padding:20px;padding-bottom:100px;">
 	<h2 class="text-center text-white">{{ err_message }}</h2>
 	<hr class="text-muted">
-	<p class="text-white">Sorry about that.</p>
+	<p class="text-white">{{ __("Sorry about that.") }}</p>
 	<div style="text-align:center;margin:auto"><img src="assets/logo_border_placeholder.png" style="max-width:150px;"></div>
 </div>
 	{% endblock %}
