--- a/templates/default/components/smallvideobox.twig
+++ b/templates/default/components/smallvideobox.twig
@@ -10,7 +10,11 @@
 			</div>
 			<div class="col-7">
 				<h5><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h5>
-				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} {{ __("views") }} &bull; {{ data.time | relative_time }}</p>
+				{# hack to prevent twig from outputing the number 1 #}
+				{% if data.views != 1 %}
+					{% set pluralViews = __("s") %}
+				{% endif %}
+				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} {{ __("view%s.", [pluralViews]) }} &bull; {{ data.time | relative_time }}</p>
 			</div>
 		</div>
 	</div>
