--- a/templates/default/components/browsechannelbox.twig
+++ b/templates/default/components/browsechannelbox.twig
@@ -1,10 +1,9 @@
-<div class="card flex-fill" 
-style="margin:10px; ">
+<div class="card" style="margin-bottom:10px">
 	<div class="card-body text-center">
 		<div class="row"><a href="user.php?name={{ data.username }}">
 			<div class="col-lg-12" style="margin-bottom:15px">
 				<div class="img-thumbnail">
-					<img class="img-fluid img-md-card"  src="{{ profile_image(data.username) }}">
+					<img class="img-fluid" src="{{ profile_image(data.username) }}">
 				</div>
 			</div>
 			<div class="col-lg-12">
