--- a/templates/default/watch.twig
+++ b/templates/default/watch.twig
@@ -24,6 +24,7 @@
 <div class="row">
 	<div class="col-lg-9">
 		<div id="playerContainer">
+			<!--- todo: redo "video processed" message to use _error.twig -gr 7/22/2021 --->
 			{% if (video.flags b-and 2) %}
 				<div style="height: 30rem; background-color: black; color: white; text-align: center; padding: 15rem">
 					{{ __("This video is being processed. Try again later.") }}
@@ -148,7 +149,7 @@
 			<button id="{% if logged_in %}post{% endif %}" class="btn btn-primary {% if not logged_in %}disabled{% endif %}">
 			{{ icon('reply-fill', 16) }} 
 			{{ __("Send") }}
-			<div class="spinner-border spinner-border-sm d-none" id="commentPostingSpinner" role="status" aria-hidden="true"><span class="visually-hidden">Posting...</span></div>
+			<div class="spinner-border spinner-border-sm d-none" id="commentPostingSpinner" role="status" aria-hidden="true"><span class="visually-hidden">{{ __("Posting...") }}</span></div>
 			</button>
 			</div>{% endif %}
 				<div id="comment"></div>
